test/conformance/chainsaw/mutating-policies/reporting/audit-annotations/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mpol-audit-ann-cm
  namespace: mpol-audit-ann-ns
data:
  key1: value1
