test/conformance/chainsaw/mutating-policies/reporting/audit-annotations/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mpol-audit-ann-ns
