test/conformance/chainsaw/mutating-policies/reporting/audit-annotations/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: mpol-audit-annotations
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["configmaps"]
  matchConditions:
  - name: in-test-namespace
    expression: object.metadata.namespace == 'mpol-audit-ann-ns'
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >-
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              foo: "bar"
            }
          }
        }
  auditAnnotations:
  - key: resource-name
    valueExpression: "'cm/' + string(object.metadata.name)"
  - key: data-key
    valueExpression: >-
      has(object.data) && 'key1' in object.data ? 'present' : 'absent'
