test/conformance/chainsaw/mutating-policies/reporting/audit-annotations/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  namespace: mpol-audit-ann-ns
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: ConfigMap
    name: mpol-audit-ann-cm
results:
- message: success
  policy: mpol-audit-annotations
  properties:
    resource-name: cm/mpol-audit-ann-cm
    data-key: present
    process: background scan
  result: pass
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: v1
  kind: ConfigMap
  name: mpol-audit-ann-cm
  namespace: mpol-audit-ann-ns
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
