test/conformance/chainsaw/mutating-policies/reporting/audit-annotations/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-audit-annotations
spec:
  concurrent: false
  steps:
  - name: create namespace
    try:
    - apply:
        file: ns.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: verify-policy
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: mpol-audit-annotations
  - name: sleep
    try:
    - sleep:
        duration: 10s
  - name: create ConfigMap
    try:
    - apply:
        file: configmap.yaml
  - name: verify mutated configmap
    try:
    - assert:
        file: configmap-assert.yaml
  - name: sleep
    try:
    - sleep:
        duration: 5s
  - name: verify report contains audit annotation properties
    try:
    - assert:
        file: report.yaml
